--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,55 +14,47 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- style css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Responsive-->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif" />
+    <link rel="icon" href="/images/fevicon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+    <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+ <link rel="icon" type="image/png" href="/images/icons/favicon.ico"/>
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/vendor/animsition/css/animsition.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="/css/util.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <!--===============================================================================================-->
 </head>
 <!-- body -->
 
 <body class="main-layout">
 <!-- loader  -->
-<div class="loader_bg">
-    <div class="loader"><img src="images/loading.gif" alt="#" /></div>
-</div>
-<!-- end loader -->
 
 <div class="wrapper">
-
-
-    <div class="sidebar">
-        <!-- Sidebar  -->
-        <nav id="sidebar">
-
-            <div id="dismiss">
-                <i class="fa fa-arrow-left"></i>
-            </div>
-
-            <ul class="list-unstyled components">
-
-                <li class="active"> <a href="index.html">Home</a></li>
-                <li> <a href="/about">About</a></li>
-                <li> <a href="/product">Product</a></li>
-                <li> <a href="/blog">Blog</a></li>
-                <li> <a href="/contact">Contact us</a></li>
-
-            </ul>
-
-        </nav>
-    </div>
-
     <div id="content">
         <!-- header -->
         <header>
@@ -76,29 +68,38 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.jpg" alt="#"></a>
+                                        <a href="/"><img src="/images/logo.jpg" alt="#"></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-9">
+
                             <div class="right_header_info">
+                                <div class="form-group has-search" style="display: inline-block;float:left;">
+                                <span class="fa fa-search form-control-feedback"></span>
+                                <input type="text" class="form-control" placeholder="Search">
+                                </div>
                                 <ul>
                                     <li>
-                                        <a href="/login"><img style="margin-right: 15px;" src="icon/1.png" alt="#" /></a>
-                                    </li>
-                                    <li class="tytyu">
-                                        <a href="#"><img style="margin-right: 15px;" src="icon/2.png" alt="#" /></a>
+                                        <div class="dropdown" style="display: inline;">
+                                          <button class="btn btn-secondary" type="button" id="dropdownMenu2" 
+                                          data-toggle="dropdown"
+                                          style="display: inline; margin-right: 15px">
+                                            Account
+                                          </button>
+                                          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                            <a class="dropdown-item" href="/login">Login</a>
+                                            <a class="dropdown-item" href="/signup">Signup</a>
+                                            <a class="dropdown-item" href="/user/information">User information</a>
+                                            <a class="dropdown-item" href="/user/order">Order</a>
+                                          </div>
+                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#"><img style="margin-right: 15px;" src="icon/3.png" alt="#" /></a>
+                                        <a href="cart"><img style="margin-right: 15px;" src="/icon/3.png" alt="#" /></a>
                                     </li>
 
-                                    <li>
-                                        <button type="button" id="sidebarCollapse">
-                                            <img src="images/menu_icon.png" alt="#" />
-                                        </button>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -117,17 +118,15 @@
                     <div class="row">
                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
 
-                            <img class="logo1" src="images/logo1.jpg" />
+                            <img class="logo1" src="/images/logo1.jpg" />
                         </div>
 
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
 
                             <ul class="lik">
-                                <li> <a href="/index">Home</a></li>
+                                <li> <a href="/">Home</a></li>
                                 <li> <a href="/about">About</a></li>
                                 <li> <a href="/product">Product</a></li>
-                                <li> <a href="/blog">Blog</a></li>
-                                <li> <a href="/contact">Contact us</a></li>
                             </ul>
                         </div>
 
@@ -143,31 +142,6 @@
 
                 </div>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="new">
-                            <h3>Newsletter</h3>
-                            <form class="newtetter">
-                                <input class="tetter" placeholder="Your email" type="text" name="Your email">
-                                <button class="submit">Subscribe</button>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="newtt">
-                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point
-                                <br> of using Lorem I</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="copyright">
-                <p>Copyright 2019 All Right Reserved By <a href="https://html.design/">Free html Templates</a></p>
-            </div>
-
         </div>
     </footer>
     <!-- end footer -->
@@ -176,51 +150,24 @@
 </html>
 
 <!-- Javascript files-->
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/jquery-3.0.0.min.js"></script>
-<!-- sidebar -->
-<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="js/custom.js"></script>
-<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function() {
+<script src="/js/jquery.min.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.bundle.min.js"></script>
+<script src="/js/jquery-3.0.0.min.js"></script>
+<div id="dropDownSelect1"></div>
 
-        $("#sidebar").mCustomScrollbar({
-            theme: "minimal"
-        });
-
-        $('#dismiss, .overlay').on('click', function() {
-            $('#sidebar').removeClass('active');
-            $('.overlay').removeClass('active');
-        });
-
-        $('#sidebarCollapse').on('click', function() {
-            $('#sidebar').addClass('active');
-            $('.overlay').addClass('active');
-            $('.collapse.in').toggleClass('in');
-            $('a[aria-expanded=true]').attr('aria-expanded', 'false');
-        });
-
-    });
-</script>
-<script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
-    function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 11,
-            center: {lat: 40.645037, lng: -73.880224},
-        });
-
-        var image = 'images/maps-and-flags.png';
-        var beachMarker = new google.maps.Marker({
-            position: {lat: 40.645037, lng: -73.880224},
-            map: map,
-            icon: image
-        });
-    }
-</script>
-<!-- google map js -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script>
+<!--===============================================================================================-->
+<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+<script src="/vendor/animsition/js/animsition.min.js"></script>
+<!--===============================================================================================-->
+<script src="/vendor/bootstrap/js/popper.js"></script>
+<!--===============================================================================================-->
+<script src="/vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+<script src="/vendor/daterangepicker/moment.min.js"></script>
+<script src="/vendor/daterangepicker/daterangepicker.js"></script>
+<!--===============================================================================================-->
+<script src="/vendor/countdowntime/countdowntime.js"></script>
+<!--===============================================================================================-->
+<script src="/js/main.js"></script>
