--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -3,8 +3,7 @@
 <h1 style="color:#008000; font-weight:bold">SHOPPING CART</h1>
 
 <div class="shopping-cart">
-  {{#each user.cart}}
-  <p class="vendor-id">{{this.vector_email}}</p>
+
   <div class="column-labels">
     <label class="product-image">Image</label>
     <label class="product-details">Product</label>
@@ -13,27 +12,45 @@
     <label class="product-removal">Remove</label>
     <label class="product-line-price">Total</label>
   </div>
-  {{#each this.items}}
+
   <div class="product">
     <div class="product-image">
-      <img src={{this.image}}>
+      <img src="images/s&w.jpg">
     </div>
     <div class="product-details">
-      <div class="product-title">{{this.name}}</div>
+      <div class="product-title">Spice & Wolf</div>
     </div>
-    <div class="product-price">{{this.price}}</div>
+    <div class="product-price">69000</div>
     <div class="product-quantity">
-            <input type="number" value={{this.quantity}} min="1">
+      <input type="number" value="2" min="1">
     </div>
     <div class="product-removal">
       <button class="remove-product">
         Remove
       </button>
     </div>
-    <div class="product-line-price">{{this.total}}</div>
+    <div class="product-line-price">69000</div>
   </div>
-  {{/each}}
-{{/each}}
+
+  <div class="product">
+    <div class="product-image">
+      <img src="images/wolfie.jpg">
+    </div>
+    <div class="product-details">
+      <div class="product-title">Wolfie The Bunny</div>
+    </div>
+    <div class="product-price">52000</div>
+    <div class="product-quantity">
+      <input type="number" value="1" min="1">
+    </div>
+    <div class="product-removal">
+      <button class="remove-product">
+        Remove
+      </button>
+    </div>
+    <div class="product-line-price">52000</div>
+  </div>
+
   <div class="totals">
     <div class="totals-item">
       <label>Subtotal</label>
