checkout function complete

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -122,9 +122,6 @@
                                         <li>
                                             <a href="/user/cart"><img style="margin-right: 15px;" src="/icon/3.png"
                                                     alt="#" />
-                                                    (
-                                                    <span id="header-total-cart">0</span>
-                                                    )
                                             </a>
                                         </li>
 
@@ -185,6 +182,7 @@
 <script src="/js/jquery-3.0.0.min.js"></script>
 <script src="/js/slider.js"></script>
 <script src="/js/cart.js"></script>
+<script src="/js/checkout.js"></script>
 
 <div id="dropDownSelect1"></div>
 
@@ -203,3 +201,5 @@
 <script src="/vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
 <script src="/js/main.js"></script>
+<script src="/js/editvoucher.js"></script>
+<script src="/js/edituser.js"></script>
