--- a/views/admin/managevoucher.hbs
+++ b/views/admin/managevoucher.hbs
@@ -16,20 +16,19 @@
             </tr>
         </thead>
         <tbody>
-        {{#each product}}
+        {{#each voucher}}
             <tr>
-                <td style="text-align: center; font-size: large; vertical-align:middle">{{this.id}}</td>
-                <td style="text-align: center; font-size: large; vertical-align:middle">{{this.name}}</td> 
-                <td style="text-align: center; font-size: large; vertical-align:middle">{{this.discount}}</td>
-                <td style="text-align: center; font-size: large; vertical-align:middle">{{this.createdAt}}</td>
-                <td style="text-align: center; font-size: large; vertical-align:middle">{{this.status}}</td>
-                <td></td>
+                <td class = "vid" style="text-align: center; font-size: large; vertical-align:middle">{{this._id}}</td> 
+                <td class = "vname" style="text-align: center; font-size: large; vertical-align:middle">{{this.name}}</td> 
+                <td class = "vdis" style="text-align: center; font-size: large; vertical-align:middle">{{this.discount}}</td>
+                <td class = "vdate" style="text-align: center; font-size: large; vertical-align:middle">{{this.createdAt}}</td>
+                <td class = "vstat" style="text-align: center; font-size: large; vertical-align:middle">{{this.status}}</td>
                 <td style="vertical-align:middle">
                     <div class="icon-bar">
-                        <a class="active" href="#">
+                        <a class="active" href="{{this._id}}/edit">
                             <i class="fas fa-pencil-alt"></i>
                         </a>
-                        <a class="active" href="#">
+                        <a class="active trashlink">
                             <i class="fas fa-trash-alt"></i>
                         </a>
                     </div>
@@ -40,7 +39,7 @@
         <div class="col-md-12">
             <div class="pagination col-md-12"style="margin-left:10px">
                 <ul class="page-list">
-                    <li class="page"><a href="#">&lt;&lt;</a></li>
+                    <li class="page"><a href={{pages.0.pageA}}>&lt;&lt;</a></li>
                     {{#each pages}}
                     <li class=" page"><a href={{this.pageA}}>{{this.page}}</a></li>
                     {{/each}}
@@ -51,9 +50,9 @@
         </div>
         
     </table>
-    <a href="/vendor/createproduct/{{vendor_id}}">
+    <a href="/admin/createvoucher/">
     <button class="press create-button">
-        Create New Product
+        Create New Voucher
     </button>
             </a>
 
