--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -37,26 +37,22 @@
     </div>
 
     {{/each}}
-<div class="col-md-12">
-            <div class="pagination col-md-12"style="margin-left:10px">
-                <ul class="page-list">
-                    <li class="page"><a href="#">&lt;&lt;</a></li>
-                    {{#each pages}}
-                    <li class=" page"><a href={{this.pageA}}>{{this.page}}</a></li>
-                    {{/each}}
-                    <li class="page"><a href="#">&gt;&gt;</a></li>
-                </ul>
-            </div>
 
-        </div>
-        <div id="current-page" style="display: none;" name={{currentPage}}></div>
   <div class="totals">
+    <div class="totals-item">
+      <label>Subtotal</label>
+      <div class="totals-value" id="cart-subtotal">0</div>
+    </div>
+    <div class="totals-item">
+      <label>Tax (5%)</label>
+      <div class="totals-value" id="cart-tax">0</div>
+    </div>
     <div class="totals-item totals-item-total">
       <label>Grand Total</label>
       <div class="totals-value" id="cart-total">0</div>
     </div>
   </div>
 
-  <a href="/user/checkout"><button class="checkout">Checkout</button></a>
+  <button class="checkout">Checkout</button>
 
 </div>
