--- a/views/user/order.hbs
+++ b/views/user/order.hbs
@@ -40,7 +40,7 @@
             <div class="line"></div>
         </div>
         <button class="button cancel">
-                Cancel Order
+                Cancel An Order
         </button>
         <div class="card-body">
             <article class="card">
@@ -73,7 +73,7 @@
             <div class="line"></div>
         </div>
     <button class="button cancel">
-        Cancel Order
+        Cancel An Order
     </button>
     </article>
 </div>
