--- a/public/css/order.css
+++ b/public/css/order.css
@@ -56,7 +56,7 @@ p {
 .line{
     width: 100%;
     height: 5px;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid black;
     position: relative;
 }
 
@@ -83,3 +83,51 @@ td{
 }
 
 .cancel:hover {background: red;}
+
+.user_info{
+    border-radius: 1em;
+    background-color: var(--color-primary);
+    color: black;
+    padding: 1em;
+}
+
+.user-card {
+    margin-top: 15px;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid black;
+    border-radius: 0.10rem
+}
+
+.apply_voucher{
+    border: 1px black;
+    border-style: solid;
+    border-right-width: 1px;
+    background-color: #48AAAD;
+    color: white;
+    font-weight: bold;
+    text-indent: 8px;
+}
+
+.apply_voucher:after {
+    content: "\276f";
+    padding: 0.5em;
+    position: relative;
+    right: 0;
+}
+.apply_voucher:hover, .apply_voucher:focus, .apply_voucher:active {
+    background: rgb(128, 202, 248);
+}
+.apply_voucher:hover:after, .apply_voucher:focus:after, .apply_voucher:active:after {
+    right: -5px;
+}
