--- a/views/admin/managevoucher.hbs
+++ b/views/admin/managevoucher.hbs
@@ -28,7 +28,7 @@
                         <a class="active" href="{{this._id}}/edit">
                             <i class="fas fa-pencil-alt"></i>
                         </a>
-                        <a class="active trashlink">
+                        <a class="active trashlink" style="cursor: pointer">
                             <i class="fas fa-trash-alt"></i>
                         </a>
                     </div>
@@ -39,7 +39,7 @@
         <div class="col-md-12">
             <div class="pagination col-md-12"style="margin-left:10px">
                 <ul class="page-list">
-                    <li class="page"><a href="#">&lt;&lt;</a></li>
+                    <li class="page"><a href={{pages.0.pageA}}>&lt;&lt;</a></li>
                     {{#each pages}}
                     <li class=" page"><a href={{this.pageA}}>{{this.page}}</a></li>
                     {{/each}}
