--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -105,9 +105,9 @@
                                                     {{/ifCond}}
                                                     {{#ifCond user.role 2}}
                                                     <a class="dropdown-item"
-                                                        href="admin/manageuser/">Manage User</a>
+                                                        href="/admin/manageuser">Manage User</a>
                                                     <a class="dropdown-item"
-                                                        href="admin/managevoucher/">Manage Voucher</a>
+                                                        href="/admin/managevoucher">Manage Voucher</a>
                                                     {{/ifCond}}
                                                     <a class="dropdown-item" href="/user/logout">Logout</a>
                                                 </div>
@@ -182,6 +182,8 @@
 <script src="/js/jquery-3.0.0.min.js"></script>
 <script src="/js/slider.js"></script>
 <script src="/js/cart.js"></script>
+<script src="/js/checkout.js"></script>
+<script src="/js/order.js"></script>
 
 <div id="dropDownSelect1"></div>
 
@@ -201,3 +203,4 @@
 <!--===============================================================================================-->
 <script src="/js/main.js"></script>
 <script src="/js/editvoucher.js"></script>
+<script src="/js/edituser.js"></script>
